# Physical-AI-Humanoid-Robotics

./: .gitignore  404.html  auth.html  create_feature.sh  index.html  pyproject.toml  requirements.txt  run_dev_server.py  sitemap.xml
.specify/memory/: constitution.md
assets/css/: styles.7b89be0b.css
assets/js/: 0e384e19.6a114b8e.js  1df93b7f.83b7b1b2.js  1eac6550.24eb4896.js  209c7d94.f3e18327.js  35099b4b.f781d12e.js  3cc69b40.1355a46d.js  408d4cac.ee429600.js  55eb410f.fb0ccac1.js  5aba1f26.55b186a6.js  6b1480fb.ad4207f3.js  6bcbeaad.efea82cf.js  75501347.0e77e7d0.js  9f294c8a.cc3708ed.js  af9d7c23.0df88bf6.js  b614d226.041e27b1.js  b8bbf1af.f5252aa9.js  c7ac22f8.72eaf4c8.js  c872816f.f556e424.js  d0e72095.98742fc9.js  e67683e7.54f39ac8.js  main.38c1e39b.js  runtime~main.08780518.js
backend/: =0.1.0  README.md  api.py  debug_qdrant.py  requirements.txt  test_api.py  test_example_query.py  test_qdrant_basic.py  test_qdrant_connection.py  test_qdrant_retrieval.py  test_rag.py
backend/.venv_new/: pyvenv.cfg
backend/src/: agent_connector.py  main.py  request_validator.py  shared_types.py
backend_env/: pyvenv.cfg
docs/: api-reference.md  architecture.md  foundations-of-physical-ai.html  getting-started.md  humanoid-robotics-overview.html
docs/assessments/: capstone-project-definition.html  hardware-requirements.html
physical-ai-textbook/: .gitignore  README.md  checklist.md  dev.sh  docusaurus.config.js  package-lock.json  package.json  plan.md  sidebars.js  spec.md  start.sh  tasks.md  tsconfig.json
tests/: test_basic_functionality.py
(+223 files in other folders)
