[project]
name = "book-rag-agent"
version = "0.1.0"
description = "Agent-based RAG system for book content retrieval and instructional response generation"
authors = ["AHZAZ AHMED <ahzaz@example.com>"]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"